# app/Http/Controllers/Api/CategoryController.php
@@ -8,10 +8,25 @@ use App\Http\Resources\CategoryResource;
 use App\Models\Category;
 use Illuminate\Http\Request;
 use Illuminate\Support\Str;
+use Knuckles\Scribe\Attributes\Endpoint;
+use Knuckles\Scribe\Attributes\Group;
+use Knuckles\Scribe\Attributes\QueryParam;
 use Symfony\Component\HttpFoundation\Response;
+
+/**
+ * @group Categories
+ *
+ * Managing categories
+ */
 
 class CategoryController extends Controller
 {
+    /**
+     * Get all categories
+     *
+     * Getting the list of the categories
+     * */
+
     public function index()
     {
         abort_if(! auth()->user()->tokenCan('categories-list'), 403);
@@ -19,6 +34,7 @@ class CategoryController extends Controller
         return CategoryResource::collection(Category::all());
     }
 
+    #[Endpoint('Show category', description: 'Get a category by ID')]
     public function show(Category $category)
     {
         abort_if(! auth()->user()->tokenCan('categories-show'), 403);
@@ -26,6 +42,13 @@ class CategoryController extends Controller
         return new CategoryResource($category);
     }
 
+    /**
+     * Store a new category
+     *
+     * Creating a new category
+     *
+     * @bodyParam name string required The name of the category. Example: Electronics
+     */
     public function store(StoreCategoryRequest $request)
     {
         $data = $request->all();
